<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgrand"
    android:anyDensity="true"
    tools:context=".MainActivity" >

    
    <Button
        android:id="@+id/generalPKButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@layout/buttongreenstyle"
        android:layout_marginTop="114dp"
        android:text="@string/generalPK" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/goSanguo"
        android:layout_below="@+id/goSanguo"
        android:layout_marginTop="55dp"
        android:background="@layout/buttongreenstyle"
        android:text="@string/about" />

    <Button
        android:id="@+id/goSanguo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/generalPKButton"
        android:layout_below="@+id/generalPKButton"
        android:layout_marginTop="59dp"
        android:background="@layout/buttongreenstyle"
        android:text="@string/goSanguo" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/titleString" />

</RelativeLayout>