<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrand"
    android:orientation="vertical" >

    <Button
        android:id="@+id/sanguoBattle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/buttongreenstyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sanguoHistory"
        android:layout_marginTop="60dp"
        android:text="@string/sanguoBattle" />

    <Button
        android:id="@+id/sanguoGenerals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@layout/buttongreenstyle"
        android:layout_below="@+id/sanguoBattle"
        android:layout_marginTop="50dp"
        android:text="@string/sanguoGenerals" />

    <Button
        android:id="@+id/sanguoHistory"
        android:layout_width="match_parent"
        android:background="@layout/buttongreenstyle"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="95dp"
        android:text="@string/sanguoHistory" />

</RelativeLayout>
